# QuantChatAgent

./: .env.example  .gitattributes  .gitignore  API_CURL_COMMANDS.md  README.md  main.py  pyproject.toml  requirements.txt  test_api.py  test_stock_tools.py
.clinerules/: tools.md
app/: __init__.py  config.py  main.py
app/agents/: finance_agent.py
app/api/: chat.py  deps.py
app/models/: chat.py  chat_session.py  stock.py  stock_basic_info.py
app/services/: database_service.py  llm_service.py  rag_service.py  redis_client.py  reranker_service.py  result_formatter.py  session_service.py  stock_service.py  vector_store.py
app/tests/: test_agent.py  test_api.py  test_code_query.py  test_import_performance.py  test_llm.py  test_rag.py  test_rag_lazy_loading.py  test_reranker.py  test_search.py  test_session_service.py  test_stock_tools.py
app/tools/: code_query.py  rag_tools.py  stock_tools.py
app/utils/: chat_utils.py
docs/: API_CURL_COMMANDS.md  SESSION_MANAGEMENT.md  SESSION_MEMORY_IMPLEMENTATION.md  migrate.md
migrations/: 001_create_chat_tables.sql  002_fix_tokens_constraint.sql
